ADD AUTO SCROOLING TO CAROUSEL

--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
           </div>
         </div>
       </nav>
-      <!--  data-bs-ride="carousel" -->
-      <div id="carouselExampleAutoplaying" class="carousel slide carousel-container">
+      <div id="carouselExampleAutoplaying" class="carousel slide carousel-container" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="/src/bg4.jpg" class="d-block w-100 carousel-img" height="550rem" alt="bg1.jpg" />
