FIX BUG RESPONSIVE ON FEATURE SECTION

--- a/index.html
+++ b/index.html
@@ -116,25 +116,25 @@
         <hr class="mt-5">
         <div class="row mt-5 feature-list">
           <div class="col-lg-6">
-            <div class="w-100 img-feature" style="background-image: url(https://picsum.photos/500/500); background-repeat: no-repeat;"></div>
+            <img class="w-100 h-100 img-feature" src="/src/feature/Feature 1.jpeg" style="background-repeat: no-repeat;"></img>
           </div>
           <div class="col-lg-6 feature-text-container">
             <h1 class="text-left fs-2">Playlist feature</h1>
             <p class="text-left fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni vitae ipsum, eaque tempora nobis officiis officia iusto, necessitatibus, quia laboriosam eos quo quos architecto sunt.</p>
           </div>
-        </div>
+        </div><br><br><br>
         <div class="row mt-5 feature-list">
           <div class="col-lg-6">
-            <div class="w-100 img-feature" style="background-image: url(https://picsum.photos/501/501); background-repeat: no-repeat;"></div>
+            <img class="w-100 h-100 img-feature" src="/src/feature/Feature 2.png" style="background-repeat: no-repeat;"></img>
           </div>
           <div class="col-lg-6 feature-text-container">
             <h1 class="text-left fs-2">Search Music, Artist, & Genre</h1>
             <p class="text-left fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni vitae ipsum, eaque tempora nobis officiis officia iusto, necessitatibus, quia laboriosam eos quo quos architecto sunt.</p>
           </div>
-        </div>
+        </div><br><br><br>
         <div class="row mt-5 feature-list">
           <div class="col-lg-6">
-            <div class="w-100 img-feature" style="background-image: url(https://picsum.photos/502/502); background-repeat: no-repeat;"></div>
+            <img class="w-100 h-100 img-feature" src="/src/feature/Feature 3.jpeg" style="background-repeat: no-repeat;"></img>
           </div>
           <div class="col-lg-6 feature-text-container">
             <h1 class="text-left fs-2">And lastly, this one. Checkmate.</h1>
