SCROOL STYLE & SMOOTH SCROOL

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <a class="nav-link active" aria-current="page" href="#home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Artist</a>
+                <a class="nav-link" href="#Artist">Artist</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Feature</a>
+                <a class="nav-link" href="#Feature">Feature</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Footer</a>
@@ -55,7 +55,7 @@
       <div id="carouselExampleAutoplaying" class="carousel slide carousel-container" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/src/bg4.jpg" class="d-block w-100 carousel-img" height="550rem" alt="bg1.jpg" />
+            <img src="/src/bg4.jpg" class="d-block w-100 carousel-img" height="650rem" alt="bg1.jpg" />
             <div class="carousel-caption carousel-main text-light mb-5" style="margin-left: -5rem">
               <h5 class="text-start fs-2">Spotify V2 by-Kenn</h5>
               <p class="text-start mb-3">
@@ -66,14 +66,14 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/src/bg2.jpg" class="d-block w-100 carousel-img" height="550rem" alt="bg2.jpg" />
+            <img src="/src/bg2.jpg" class="d-block w-100 carousel-img" height="650rem" alt="bg2.jpg" />
             <div class="carousel-caption carousel-2 mb-5 text-light">
               <h5 class="fs-2">Cintai kamu seperti kamu mencintai musikmu!</h5>
               <p>Let the music take over – immerse yourself in our Spotify clone and start listening now!</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/src/bg3.jpg" class="d-block w-100 carousel-img" height="550rem" alt="bg3.jpg" />
+            <img src="/src/bg3.jpg" class="d-block w-100 carousel-img" height="650rem" alt="bg3.jpg" />
             <div class="carousel-caption carousel-3 text-light mb-5" style="margin-left: -5rem">
               <h5 class="fs-2">Enjoy the music!</h5>
               <p>Embrace the freedom of limitless music with our Spotify clone – sign up now!</p>
@@ -90,7 +90,7 @@
         </button>
       </div>
     </section>
-    <section class="section2" style="height: 75vh;">
+    <section class="section2" id="Artist" style="height: 100vh;">
       <div class="container">
         <div class="row justify-content-center text-center mt-3">
           <div class="col-sm-8 col-md-6 col-lg-4 p-5">
@@ -109,7 +109,7 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi deserunt, cumque totam est quos laboriosam neque, fugiat nesciunt quo ab velit in. Explicabo, iusto aperiam!</p>
           </div>
         </div>
-        <br>
+        <br id="Feature">
         <hr class="mt-5">
         <div class="row mt-5 justify-content-end" style="height: 100vh;">
           <div class="col-lg-6">
@@ -117,7 +117,25 @@
             <p class="text-left fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni vitae ipsum, eaque tempora nobis officiis officia iusto, necessitatibus, quia laboriosam eos quo quos architecto sunt.</p>
           </div>
           <div class="col-lg-6">
-            <div class="w-100 h-100" style="background-image: url(https://picsum.photos/500); background-repeat: no-repeat;"></div>
+            <div class="w-100 h-100" style="background-image: url(https://picsum.photos/500/500); background-repeat: no-repeat;"></div>
+          </div>
+        </div>
+        <div class="row mt-5 justify-content-end" style="height: 100vh;">
+          <div class="col-lg-6">
+            <div class="w-100 h-100" style="background-image: url(https://picsum.photos/501/501); background-repeat: no-repeat;"></div>
+          </div>
+          <div class="col-lg-6">
+            <h1 class="text-left fs-2">Oh yeah, it’s that good. See for yourself.</h1>
+            <p class="text-left fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni vitae ipsum, eaque tempora nobis officiis officia iusto, necessitatibus, quia laboriosam eos quo quos architecto sunt.</p>
+          </div>
+        </div>
+        <div class="row mt-5 justify-content-end" style="height: 100vh;">
+          <div class="col-lg-6">
+            <h1 class="text-left fs-2">And lastly, this one. Checkmate.</h1>
+            <p class="text-left fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni vitae ipsum, eaque tempora nobis officiis officia iusto, necessitatibus, quia laboriosam eos quo quos architecto sunt.</p>
+          </div>
+          <div class="col-lg-6">
+            <div class="w-100 h-100" style="background-image: url(https://picsum.photos/502/502); background-repeat: no-repeat;"></div>
           </div>
         </div>
       </div>
