UPDATE ARTIST PROFILE & IMAGE

--- a/index.html
+++ b/index.html
@@ -90,30 +90,31 @@
         </button>
       </div>
     </section>
-    <section class="section2" id="Artist" style="height: 100vh;">
+    <br id="Artist">
+    <section class="section2" style="height: 100vh;">
       <div class="container">
-        <div class="row justify-content-center text-center mt-3">
+        <div class="row justify-content-center text-center mt-5">
           <div class="col-sm-8 col-md-6 col-lg-4 p-5">
-            <img src="/src/bg1.jpg" alt="image1" class="rounded-circle" width="50%" height="55%">
-            <h1>Heading</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi deserunt, cumque totam est quos laboriosam neque, fugiat nesciunt quo ab velit in. Explicabo, iusto aperiam!</p>
+            <img src="/src/artist/Dua_lipa.jpeg" alt="image1" class="rounded-circle" width="80%" height="50%">
+            <h1 class="fs-2">Dua Lipa</h1>
+            <p>Dua Lipa is an English singer, songwriter, and model. Her musical career began at age 14, when she began covering songs by other artists on YouTube. In 2015, she was signed with Warner Music Group and released her first single soon after.</p>
           </div>
           <div class="col-sm-8 col-md-6 col-lg-4 p-5">
-            <img src="/src/bg1.jpg" alt="image1" class="rounded-circle " width="50%" height="55%">
-            <h1>Heading</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi deserunt, cumque totam est quos laboriosam neque, fugiat nesciunt quo ab velit in. Explicabo, iusto aperiam!</p>
+            <img src="/src/artist/Ed_sheeran.jpeg" alt="image1" class="rounded-circle " width="75%" height="50%">
+            <h1 class="fs-2">Ed Sheeran</h1>
+            <p>Ed Sheeran is an English singer-songwriter who has taken the music world by storm with his soulful vocals and heartfelt lyrics. His music seamlessly blends pop, folk, and R&B, creating a sound that is both catchy and relatable.</p>
           </div>
           <div class="col-sm-8 col-md-6 col-lg-4 p-5">
-            <img src="/src/bg1.jpg" alt="image1" class="rounded-circle " width="50%" height="55%">
-            <h1>Heading</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi deserunt, cumque totam est quos laboriosam neque, fugiat nesciunt quo ab velit in. Explicabo, iusto aperiam!</p>
+            <img src="/src/artist/Taylor_swift.jpeg" alt="image1" class="rounded-circle " width="75%" height="50%">
+            <h1 class="fs-2">Taylor Swift</h1>
+            <p>Taylor Swift, a singer-songwriter who rose to fame in country music, has become a global pop icon. Her narrative lyrics, catchy hooks, She's a powerhouse performer, a savvy businesswoman, and a record-smashing artist.</p>
           </div>
         </div>
         <br id="Feature">
         <hr class="mt-5">
         <div class="row mt-5 justify-content-end" style="height: 100vh;">
           <div class="col-lg-6">
-            <h1 class="text-left fs-2">First featurette heading. It’ll blow your mind.</h1>
+            <h1 class="text-left fs-2">Playlist feature</h1>
             <p class="text-left fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni vitae ipsum, eaque tempora nobis officiis officia iusto, necessitatibus, quia laboriosam eos quo quos architecto sunt.</p>
           </div>
           <div class="col-lg-6">
@@ -125,7 +126,7 @@
             <div class="w-100 h-100" style="background-image: url(https://picsum.photos/501/501); background-repeat: no-repeat;"></div>
           </div>
           <div class="col-lg-6">
-            <h1 class="text-left fs-2">Oh yeah, it’s that good. See for yourself.</h1>
+            <h1 class="text-left fs-2">Search Music, Artist, & Genre</h1>
             <p class="text-left fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni vitae ipsum, eaque tempora nobis officiis officia iusto, necessitatibus, quia laboriosam eos quo quos architecto sunt.</p>
           </div>
         </div>
