--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
-  <head>
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>SPOTIFY CLONE</title>
@@ -10,12 +10,13 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="icon" href="/src/icon/Spotify.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <link rel="stylesheet" href="/styles/style.css"/>
     <link rel="stylesheet" href="/styles/mobile.css"/>
-  </head>
-  <body class="overflow-x-hidden">
-    <section class="section1 overflow-hidden" id="home">
+</head>
+<body class="overflow-x-hidden">
+  <section class="section1 overflow-hidden" id="home">
       <nav class="navbar navbar-expand-sm fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
@@ -34,7 +35,7 @@
                 <a class="nav-link" href="#Feature">Feature</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Footer</a>
+                <a class="nav-link" href="#Footer">Footer</a>
               </li>
               <li class="nav-item position-absolute end-0 me-3 mt-1">
                 <i class="bi bi-moon fs-5" id="dark-mode"></i>
@@ -55,7 +56,7 @@
       <div id="carouselExampleAutoplaying" class="carousel slide carousel-container" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/src/bg4.jpg" class="d-block w-100 carousel-img" height="650rem" alt="bg1.jpg" />
+            <img src="/src/bg4.jpg" class="d-block w-100 carousel-img" alt="bg1.jpg" />
             <div class="carousel-caption carousel-main text-light mb-5" style="margin-left: -5rem">
               <h5 class="text-start fs-2">Spotify V2 by-Kenn</h5>
               <p class="text-start mb-3">
@@ -66,14 +67,14 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/src/bg2.jpg" class="d-block w-100 carousel-img" height="650rem" alt="bg2.jpg" />
+            <img src="/src/bg2.jpg" class="d-block w-100 carousel-img" alt="bg2.jpg" />
             <div class="carousel-caption carousel-2 mb-5 text-light">
               <h5 class="fs-2">Cintai kamu seperti kamu mencintai musikmu!</h5>
               <p>Let the music take over – immerse yourself in our Spotify clone and start listening now!</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/src/bg3.jpg" class="d-block w-100 carousel-img" height="650rem" alt="bg3.jpg" />
+            <img src="/src/bg3.jpg" class="d-block w-100 carousel-img" alt="bg3.jpg" />
             <div class="carousel-caption carousel-3 text-light mb-5" style="margin-left: -5rem">
               <h5 class="fs-2">Enjoy the music!</h5>
               <p>Embrace the freedom of limitless music with our Spotify clone – sign up now!</p>
@@ -89,11 +90,12 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-    </section>
+  </section>
     <br id="Artist">
-    <section class="section2" style="height: 100vh;">
-      <div class="container">
+  <section class="section2">
+    <div class="container">
         <div class="row justify-content-center text-center mt-5">
+          <h1>Popular artists on Spotify</h1>
           <div class="col-sm-8 col-md-6 col-lg-4 p-5">
             <img src="/src/artist/Dua_lipa.jpeg" alt="image1" class="rounded-circle" width="80%" height="50%">
             <h1 class="fs-2">Dua Lipa</h1>
@@ -112,40 +114,54 @@
         </div>
         <br id="Feature">
         <hr class="mt-5">
-        <div class="row mt-5 justify-content-end" style="height: 100vh;">
+        <div class="row mt-5 feature-list">
           <div class="col-lg-6">
+            <div class="w-100 img-feature" style="background-image: url(https://picsum.photos/500/500); background-repeat: no-repeat;"></div>
+          </div>
+          <div class="col-lg-6 feature-text-container">
             <h1 class="text-left fs-2">Playlist feature</h1>
             <p class="text-left fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni vitae ipsum, eaque tempora nobis officiis officia iusto, necessitatibus, quia laboriosam eos quo quos architecto sunt.</p>
           </div>
-          <div class="col-lg-6">
-            <div class="w-100 h-100" style="background-image: url(https://picsum.photos/500/500); background-repeat: no-repeat;"></div>
-          </div>
         </div>
-        <div class="row mt-5 justify-content-end" style="height: 100vh;">
+        <div class="row mt-5 feature-list">
           <div class="col-lg-6">
-            <div class="w-100 h-100" style="background-image: url(https://picsum.photos/501/501); background-repeat: no-repeat;"></div>
+            <div class="w-100 img-feature" style="background-image: url(https://picsum.photos/501/501); background-repeat: no-repeat;"></div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 feature-text-container">
             <h1 class="text-left fs-2">Search Music, Artist, & Genre</h1>
             <p class="text-left fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni vitae ipsum, eaque tempora nobis officiis officia iusto, necessitatibus, quia laboriosam eos quo quos architecto sunt.</p>
           </div>
         </div>
-        <div class="row mt-5 justify-content-end" style="height: 100vh;">
+        <div class="row mt-5 feature-list">
           <div class="col-lg-6">
+            <div class="w-100 img-feature" style="background-image: url(https://picsum.photos/502/502); background-repeat: no-repeat;"></div>
+          </div>
+          <div class="col-lg-6 feature-text-container">
             <h1 class="text-left fs-2">And lastly, this one. Checkmate.</h1>
             <p class="text-left fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni vitae ipsum, eaque tempora nobis officiis officia iusto, necessitatibus, quia laboriosam eos quo quos architecto sunt.</p>
           </div>
-          <div class="col-lg-6">
-            <div class="w-100 h-100" style="background-image: url(https://picsum.photos/502/502); background-repeat: no-repeat;"></div>
-          </div>
         </div>
+  </section>
+  <div class="container-fluid" id="Footer">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <div class="col-md-4 d-flex align-items-center">
+        <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+          <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+        </a>
+        <span class="mb-3 mb-md-0 text-body-secondary">© 2024 SpotifyClone By-Kenn</span>
       </div>
-    </section>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <script src="/config/script.js"></script>
-  </body>
+      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex" id="footer-list">
+        <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/m/k.ennn12_" target="_blank"><i class="bi bi-instagram"></i></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="https://github.com/Hirakushiii" target="_blank"><i class="bi bi-github"></i></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="https://www.linkedin.com/in/rakean-mauly-daehanira-ba3695270/" target="_blank"><i class="bi bi-linkedin"></i></a></li>
+      </ul>
+    </footer>
+  </div>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+  crossorigin="anonymous"
+></script>
+<script src="/config/script.js"></script>
+</body>
 </html>
