--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="icon" href="/src/icon/Spotify.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-    <link rel="stylesheet" href="/styles/style.css"/>
-    <link rel="stylesheet" href="/styles/mobile.css"/>
+    <link rel="icon" href="/src/icon/Spotify.png">
+    <link rel="stylesheet" href="/styles/landing-page-styles/style.css"/>
+    <link rel="stylesheet" href="/styles/landing-page-styles/mobile.css"/>
 </head>
 <body class="overflow-x-hidden">
   <section class="section1 overflow-hidden" id="home">
@@ -43,8 +43,7 @@
               </li>
               <li>
                 <button
-                  class="nav-item position-absolute end-0 btn-success rounded"
-                  style="background-color: rgba(127, 255, 0, 0.8); border: none; margin: 0.5rem 3.2rem 0 0"
+                  class="nav-item btn btn-success position-absolute end-0 me-5 mt-1 rounded gotoapp"
                 >
                   LOGIN
                 </button>
@@ -63,7 +62,7 @@
                 Experience the joy of personalized playlists, curated recommendations, and seamless music discovery – all in one place. <br />
               </p>
               <p class="text-start">Silahkan Login agar kamu bisa menikmati semua lagu disini!</p>
-              <button class="btn btn-success w-25 position-absolute start-0">Login</button>
+              <button class="btn btn-success w-25 position-absolute start-0 gotoapp">Login</button>
             </div>
           </div>
           <div class="carousel-item">
