ADD FEATURE IN APP PAGE

--- a/index.html
+++ b/index.html
@@ -162,5 +162,6 @@
   crossorigin="anonymous"
 ></script>
 <script src="/config/script.js"></script>
+<script src="/config/auth.js"></script>
 </body>
 </html>
