--- a/app/index.html
+++ b/app/index.html
@@ -33,8 +33,8 @@
     <section>
             <section class="page1 d-inline">
                 <h1 class="fs-4 mt-3">USA Music</h1>
-                <div class="card-group g-3">
-                    <div class="card g-3">
+                <div class="card-slider">
+                    <div class="card">
                         <img src="/src/icon/paging.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -44,7 +44,7 @@
                             <small class="text-body-secondary">Last updated 3 mins ago</small>
                         </div>
                     </div>
-                    <div class="card g-3">
+                    <div class="card">
                         <img src="/src/icon/paging.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -54,7 +54,7 @@
                             <small class="text-body-secondary">Last updated 3 mins ago</small>
                         </div>
                     </div>
-                    <div class="card g-3">
+                    <div class="card">
                         <img src="/src/icon/paging.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -64,7 +64,47 @@
                             <small class="text-body-secondary">Last updated 3 mins ago</small>
                         </div>
                     </div>
-                    <div class="card g-3">
+                    <div class="card">
+                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-body-secondary">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-body-secondary">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-body-secondary">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-body-secondary">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
                         <img src="/src/icon/paging.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
