--- a/app/index.html
+++ b/app/index.html
@@ -31,14 +31,15 @@
         </div>
     </nav>
     <section>
-            <section class="page1 d-inline">
+            <section class="page1 d-block">
                 <h1 class="fs-4 mt-3">USA Music</h1>
                 <div class="card-slider">
                     <div class="card">
                         <img src="/src/icon/paging.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
+                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
+                            <button class="btn btn-primary w-100">Play</button>
                         </div>
                         <div class="card-footer">
                             <small class="text-body-secondary">Last updated 3 mins ago</small>
@@ -47,8 +48,9 @@
                     <div class="card">
                         <img src="/src/icon/paging.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
+                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
+                            <button class="btn btn-primary w-100">Play</button>
                         </div>
                         <div class="card-footer">
                             <small class="text-body-secondary">Last updated 3 mins ago</small>
@@ -57,8 +59,9 @@
                     <div class="card">
                         <img src="/src/icon/paging.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
+                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
+                            <button class="btn btn-primary w-100">Play</button>
                         </div>
                         <div class="card-footer">
                             <small class="text-body-secondary">Last updated 3 mins ago</small>
@@ -67,8 +70,9 @@
                     <div class="card">
                         <img src="/src/icon/paging.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
+                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
+                            <button class="btn btn-primary w-100">Play</button>
                         </div>
                         <div class="card-footer">
                             <small class="text-body-secondary">Last updated 3 mins ago</small>
@@ -77,8 +81,9 @@
                     <div class="card">
                         <img src="/src/icon/paging.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
+                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
+                            <button class="btn btn-primary w-100">Play</button>
                         </div>
                         <div class="card-footer">
                             <small class="text-body-secondary">Last updated 3 mins ago</small>
@@ -87,8 +92,9 @@
                     <div class="card">
                         <img src="/src/icon/paging.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
+                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
+                            <button class="btn btn-primary w-100">Play</button>
                         </div>
                         <div class="card-footer">
                             <small class="text-body-secondary">Last updated 3 mins ago</small>
@@ -97,8 +103,9 @@
                     <div class="card">
                         <img src="/src/icon/paging.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
+                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
+                            <button class="btn btn-primary w-100">Play</button>
                         </div>
                         <div class="card-footer">
                             <small class="text-body-secondary">Last updated 3 mins ago</small>
@@ -107,8 +114,102 @@
                     <div class="card">
                         <img src="/src/icon/paging.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
+                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
+                            <button class="btn btn-primary w-100">Play</button>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-body-secondary">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="page1 d-block">
+                <h1 class="fs-4 mt-3">USA Music</h1>
+                <div class="card-slider">
+                    <div class="card">
+                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
+                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
+                            <button class="btn btn-primary w-100">Play</button>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-body-secondary">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
+                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
+                            <button class="btn btn-primary w-100">Play</button>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-body-secondary">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
+                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
+                            <button class="btn btn-primary w-100">Play</button>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-body-secondary">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
+                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
+                            <button class="btn btn-primary w-100">Play</button>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-body-secondary">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
+                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
+                            <button class="btn btn-primary w-100">Play</button>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-body-secondary">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
+                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
+                            <button class="btn btn-primary w-100">Play</button>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-body-secondary">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
+                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
+                            <button class="btn btn-primary w-100">Play</button>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-body-secondary">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
+                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
+                            <button class="btn btn-primary w-100">Play</button>
                         </div>
                         <div class="card-footer">
                             <small class="text-body-secondary">Last updated 3 mins ago</small>
