MENAMBAHKAN FETCH DATA API DARI 'Itunes' DAN SEDIKIT FIXING BUG PADA CARD PAGE APP

--- a/app/index.html
+++ b/app/index.html
@@ -31,192 +31,18 @@
         </div>
     </nav>
     <section>
-            <section class="page1 d-block">
-                <h1 class="fs-4 mt-3">USA Music</h1>
-                <div class="card-slider">
-                    <div class="card">
-                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
-                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
-                            <button class="btn btn-primary w-100">Play</button>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-body-secondary">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
-                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
-                            <button class="btn btn-primary w-100">Play</button>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-body-secondary">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
-                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
-                            <button class="btn btn-primary w-100">Play</button>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-body-secondary">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
-                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
-                            <button class="btn btn-primary w-100">Play</button>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-body-secondary">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
-                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
-                            <button class="btn btn-primary w-100">Play</button>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-body-secondary">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
-                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
-                            <button class="btn btn-primary w-100">Play</button>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-body-secondary">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
-                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
-                            <button class="btn btn-primary w-100">Play</button>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-body-secondary">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
-                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
-                            <button class="btn btn-primary w-100">Play</button>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-body-secondary">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="page1 d-block">
-                <h1 class="fs-4 mt-3">USA Music</h1>
-                <div class="card-slider">
-                    <div class="card">
-                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
-                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
-                            <button class="btn btn-primary w-100">Play</button>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-body-secondary">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
-                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
-                            <button class="btn btn-primary w-100">Play</button>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-body-secondary">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
-                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
-                            <button class="btn btn-primary w-100">Play</button>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-body-secondary">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
-                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
-                            <button class="btn btn-primary w-100">Play</button>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-body-secondary">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
-                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
-                            <button class="btn btn-primary w-100">Play</button>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-body-secondary">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
-                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
-                            <button class="btn btn-primary w-100">Play</button>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-body-secondary">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
-                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
-                            <button class="btn btn-primary w-100">Play</button>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-body-secondary">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="/src/icon/paging.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title" style="white-space: wrap; font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minus.</h5>
-                            <p class="card-text" style="white-space: wrap; font-size: .6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At maiores, quaerat magnam, odio, modi eum aliquam vel ea ex iure corporis ipsum tempora ab neque!</p>
-                            <button class="btn btn-primary w-100">Play</button>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-body-secondary">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                </div>
-            </section>
+            <div class="page1 d-block">
+                <h1 class="fs-4 my-3">America Album</h1>
+                <span class="card-slider slider-1">
+                    
+                </span>
+            </div>
+            <div class="page1 d-block">
+                <h1 class="fs-4 my-3">Korea Album</h1>
+                <span class="card-slider slider-2">
+                    
+                </span>
+            </div>
         </div>
     </section>
 </body>
