UPDATE 1.1 VER (FIX SOME BUG, ADD LOGOUT BUTTON)

--- a/app/index.html
+++ b/app/index.html
@@ -37,18 +37,19 @@
     </div>
     <div class="offcanvas-body">
         <button class="btn btn-outline-success w-100" id="change-tab">Search</button>
+        <button class="btn btn-outline-danger position-absolute bottom-0 start-0 w-100" id="logout">Logout</button>
     </div>
     </div>
     <section>
             <div class="page1 d-block">
                 <h1 class="fs-4 my-3">America Album</h1>
-                <span class="card-slider slider-1">
+                <span class="card-slider slider-1 placeholder">
                     
                 </span>
             </div>
             <div class="page1 d-block">
                 <h1 class="fs-4 my-3">Korea Album</h1>
-                <span class="card-slider slider-2">
+                <span class="card-slider slider-2 placeholder">
                     
                 </span>
             </div>
@@ -62,4 +63,5 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
 ></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </html>
