--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               </li>
               <li>
                 <button
-                  class="nav-item btn btn-success position-absolute end-0 me-5 mt-1 rounded gotoapp"
+                  class="btn btn-success position-absolute end-0 me-5 mt-1 rounded gotoapp"
                 >
                   LOGIN
                 </button>
