--- a/app/search.html
+++ b/app/search.html
@@ -4,18 +4,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Spotify - Search</title>
+    <link rel="icon" href="/src/icon/Spotify.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"/>
 </head>
 <body>
-    <a href="/app/index.html" class="btn btn-danger my-1 mx-1">
+    <button class="btn btn-danger my-2 mx-2" id="exit-tab">
         <i class="bi bi-arrow-90deg-left"></i>
         Back
-    </a>
+    </button>
     <div class="container">
         <h1 class="text-center mb-3">Search Music</h1>
         <div class="input-group mb-3 w-100">
-            <input type="text" class="form-control w-100 shadow-lg" placeholder="Search..." id="search-input" autocomplete="off">
+            <div class="input-group mb-3">
+                <input type="text" class="form-control shadow-lg" placeholder="Search..." id="search-input" autocomplete="off">
+                <button class="btn btn-outline-success" type="button" id="search-btn">
+                    <i class="bi bi-search"></i>
+                    Search
+                </button>
+            </div>
             <br><br>
             <p class="d-inline-flex gap-1 mt-2" style="margin: 0 auto;">
                 <button type="button" class="btn active" data-bs-toggle="button">Semua</button>
@@ -26,7 +33,6 @@
     </div>
     <div class="container-fluid">
         <div class="row justify-content-center" id="container-content">
-            
         </div>
     </div>
     <script src="/config/script-search.js"></script>
