add audio player in search

--- a/app/search.html
+++ b/app/search.html
@@ -31,6 +31,12 @@
             </p>
         </div>
     </div>
+    <footer class="container d-flex justify-content-center mb-3">
+        <audio src=""
+            class="w-75 audio-player"
+            controls>
+        </audio>
+    </footer>
     <div class="container-fluid">
         <div class="row justify-content-center" id="container-content">
         </div>
