UPDATE IN SEARCH PAGE

--- a/app/search.html
+++ b/app/search.html
@@ -31,7 +31,8 @@
             </p>
         </div>
     </div>
-    <footer class="container d-flex justify-content-center mb-3">
+    <footer class="container d-flex justify-content-center mb-3 sticky-top mt-3">
+        <br>
         <audio src=""
             class="w-75 audio-player"
             controls>
