--- a/app/search.html
+++ b/app/search.html
@@ -9,6 +9,25 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"/>
 </head>
 <body>
+    <nav class="navbar bg-body rounded-pill navbar-expand d-md-none d-lg-none d-xl-none fixed-bottom">
+        <ul class="navbar-nav nav-justified w-100">
+            <li class="nav-item">
+                <button class="nav-link" id="nav-to-home">
+                    <i class="bi bi-house"></i>
+                </button>
+            </li>
+            <li class="nav-item active">
+                <button class="nav-link" id="nav-to-search">
+                    <i class="bi bi-search border-bottom border-success px-1 py-1"></i>
+                </button>
+            </li>
+            <li class="nav-item">
+                <button class="nav-link" id="nav-to-profile">
+                    <i class="bi bi-person"></i>
+                </button>
+            </li>
+        </ul>
+    </nav>
     <button class="btn btn-danger my-2 mx-2" id="exit-tab">
         <i class="bi bi-arrow-90deg-left"></i>
         Back
@@ -44,5 +63,16 @@
     </div>
     <script src="/config/script-search.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+        document.querySelector('#nav-to-home').addEventListener('click', ()=>{
+            document.location.href = `../app/index.html?n=${name}`
+        });
+        document.querySelector('#nav-to-search').addEventListener('click', ()=>{
+            document.location.href = `../app/search.html?n=${name}`
+        });
+        document.querySelector('#nav-to-profile').addEventListener('click', ()=>{
+            document.location.href = `../app/profile.html?n=${name}`
+        });
+    </script>
 </body>
 </html>
